Added article sections.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,141 @@
             </div>
         </div>
 
+        <!-- ARTICLE SECTION -->
+        <div id="scroll" class="article">
+            <article>
+                <div class="col-lg-2 col-md-2 col-sm-1">
+                    <br>
+                </div>
+                <aside class="row">
+                    <figure class="col-lg-7 col-md-7 col-sm-6">
+                        <img src="img/mountain.png" style="width: 600px">
+                    </figure>
+                    <div class="col-lg-5 col-md-5 col-sm-6">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Optio ipsum doloribus iure at eveniet. Necessitatibus consectetur doloremque illum numquam atque, 
+                            laboriosam voluptates dolore omnis iusto voluptatem blanditiis repellendus architecto quia.</p>
+                        <button class="btn btn-primary">Leer más</button>
+                    </div>
+                </aside>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <br>
+                </div>
+            </article>
+        </div>
+        <div id="scroll" class="article">
+            <article>
+                <div class="col-lg-2 col-md-2 col-sm-1">
+                    <br>
+                </div>
+                <aside class="row">
+                    <figure class="col-lg-7 col-md-7 col-sm-6">
+                        <img src="img/mountain.png" style="width: 600px">
+                    </figure>
+                    <div class="col-lg-5 col-md-5 col-sm-6">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Optio ipsum doloribus iure at eveniet. Necessitatibus consectetur doloremque illum numquam atque, 
+                            laboriosam voluptates dolore omnis iusto voluptatem blanditiis repellendus architecto quia.</p>
+                        <button class="btn btn-primary">Leer más</button>
+                    </div>
+                </aside>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <br>
+                </div>
+            </article>
+        </div>
+        <div id="scroll" class="article">
+            <article>
+                <div class="col-lg-2 col-md-2 col-sm-1">
+                    <br>
+                </div>
+                <aside class="row">
+                    <figure class="col-lg-7 col-md-7 col-sm-6">
+                        <img src="img/mountain.png" style="width: 600px">
+                    </figure>
+                    <div class="col-lg-5 col-md-5 col-sm-6">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Optio ipsum doloribus iure at eveniet. Necessitatibus consectetur doloremque illum numquam atque, 
+                            laboriosam voluptates dolore omnis iusto voluptatem blanditiis repellendus architecto quia.</p>
+                        <button class="btn btn-primary">Leer más</button>
+                    </div>
+                </aside>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <br>
+                </div>
+            </article>
+        </div>
+        <div id="scroll" class="article">
+            <article>
+                <div class="col-lg-2 col-md-2 col-sm-1">
+                    <br>
+                </div>
+                <aside class="row">
+                    <figure class="col-lg-7 col-md-7 col-sm-6">
+                        <img src="img/mountain.png" style="width: 600px">
+                    </figure>
+                    <div class="col-lg-5 col-md-5 col-sm-6">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Optio ipsum doloribus iure at eveniet. Necessitatibus consectetur doloremque illum numquam atque, 
+                            laboriosam voluptates dolore omnis iusto voluptatem blanditiis repellendus architecto quia.</p>
+                        <button class="btn btn-primary">Leer más</button>
+                    </div>
+                </aside>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <br>
+                </div>
+            </article>
+        </div>
+        <div id="scroll" class="article">
+            <article>
+                <div class="col-lg-2 col-md-2 col-sm-1">
+                    <br>
+                </div>
+                <aside class="row">
+                    <figure class="col-lg-7 col-md-7 col-sm-6">
+                        <img src="img/mountain.png" style="width: 600px">
+                    </figure>
+                    <div class="col-lg-5 col-md-5 col-sm-6">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Optio ipsum doloribus iure at eveniet. Necessitatibus consectetur doloremque illum numquam atque, 
+                            laboriosam voluptates dolore omnis iusto voluptatem blanditiis repellendus architecto quia.</p>
+                        <button class="btn btn-primary">Leer más</button>
+                    </div>
+                </aside>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <br>
+                </div>
+            </article>
+        </div>
+        <div id="scroll" class="article">
+            <article>
+                <div class="col-lg-2 col-md-2 col-sm-1">
+                    <br>
+                </div>
+                <aside class="row">
+                    <figure class="col-lg-7 col-md-7 col-sm-6">
+                        <img src="img/mountain.png" style="width: 600px">
+                    </figure>
+                    <div class="col-lg-5 col-md-5 col-sm-6">
+                        <h1>Lorem Ipsum</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Optio ipsum doloribus iure at eveniet. Necessitatibus consectetur doloremque illum numquam atque, 
+                            laboriosam voluptates dolore omnis iusto voluptatem blanditiis repellendus architecto quia.</p>
+                        <button class="btn btn-primary">Leer más</button>
+                    </div>
+                </aside>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <br>
+                </div>
+            </article>
+        </div>
+
+        <!-- END THE ARTICLE SECTION -->
 
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
